force-app/main/default/objects/Account/fields/account_picklist__c.field-meta.xml
<CustomField>
    <fullName>account_picklist__c</fullName>
    <label>cb_account_picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cb_value_set</valueSetName>
    </valueSet>
</CustomField>