force-app/main/default/objects/Account/fields/MyUniqueField__c.field-meta.xml
<CustomField>
    <fullName>MyUniqueField__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>MyUniqueField</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>