force-app/main/default/objects/Account/recordTypes/mr_record_type.recordType-meta.xml
<RecordType>
    <fullName>mr_record_type</fullName>
    <active>true</active>
    <label>mr record type</label>
</RecordType>