force-app/main/default/objects/Account/recordTypes/my_record_type.recordType-meta.xml
<RecordType>
    <fullName>my_record_type</fullName>
    <active>false</active>
    <label>my record type</label>
</RecordType>