force-app/main/default/objects/Account/recordTypes/new_record_type.recordType-meta.xml
<RecordType>
    <fullName>new_record_type</fullName>
    <active>true</active>
    <label>new_record_type</label>
</RecordType>