force-app/main/default/objects/Account/listViews/CB_accounts_list_view.listView-meta.xml
<ListView>
    <fullName>CB_accounts_list_view</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>TX</value>
    </filters>
    <label>CB accounts list view</label>
</ListView>